[metadata]
name = shavis
version = 0.1.4
author = kernel137
author_email = kostamecev@pm.me
description = SHA256 and SHA1 hash image generator
long_description = This package visualizes the resulting hash sum for SHA256 and for SHA1, turning them into a intuitive and easier to understand image compared to the pure hash, these can be styled with custom themes.
keywords = sha256, sha1, image-generator
license = GNU GPLv3

[options]
include_package_data = True
install_requires =
  pillow
	configparser
	pathlib
  gitpython
packages = shavissrc, shavissrc.conf, shavissrc.conf.themes
package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
* =
  *.hex
  *.ini
  *.py
shavissrc.conf =
  *.ini

shavissrc.conf.themes =
  *.hex

shavissrc =
  *.py

[options.entry_points]
console_scripts =
    shavis = shavissrc.shavis:start